// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated source snapshots > binary rowset: loader, hydrator, and byte query 1`] = `
{
  "adaptiveQuery": "function query(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const uint32 = rowset.uint32;
  const offsets = rowset.offsets;
  const b1 = offsets[1];
  const b0 = offsets[0];
  const b2 = offsets[2];
  const dictionaries = rowset.dictionaries;
  const len = rowset.count;
  const d0 = dictionaries[0];
  const d1 = dictionaries[1];
  const p0 = d0.ids.get(__q0);
  const out = new Array(len);
  let j = 0;
  for (let i = 0; i < len; i++) {
    if (u8[b0 + i] === p0) {
      out[j++] = { "id": int32[b1 + i], "note": (((u8[i] >> 0) & 3) === 1 ? null : ((u8[i] >> 0) & 3) === 2 ? d1.values[uint32[b2 + i]] : undefined) };
    }
  }
  out.length = j;
  return out;
}",
  "adaptiveWriter": "function writeRows(input, len, target, dictionaries) {
  const u8 = target.bytes;
  const int32 = target.int32;
  const uint32 = target.uint32;
  const offsets = target.offsets;
  const b1 = offsets[1];
  const b0 = offsets[0];
  const b2 = offsets[2];
  const d0 = dictionaries[0];
  const d1 = dictionaries[1];
  const a1 = d1.identity;
  for (let i = 0; i < len; i++) {
    const item = input[i];
    let m0 = 0;
    if (item.note === null) m0 |= 1; else if (item.note !== undefined) m0 |= 2;
    u8[i] = m0;
    int32[b1 + i] = item.id;
    let c0_1 = d0.ids.get(item.role);
    if (c0_1 === undefined) {
      throw new RangeError("jit binary rowset: value not in fixed dictionary for role: " + item.role);
    }
    u8[b0 + i] = c0_1;
    if (item.note != null) {
      let c1_1;
      if (a1) {
        c1_1 = d1.values.length;
        d1.values[c1_1] = item.note;
      } else {
        c1_1 = d1.ids.get(item.note);
        if (c1_1 === undefined) {
          c1_1 = d1.values.length;
          d1.ids.set(item.note, c1_1);
          d1.values[c1_1] = item.note;
        }
      }
      uint32[b2 + i] = c1_1;
    }
  }
}
return writeRows;",
  "columnarHydrate": "function hydrate(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const uint32 = rowset.uint32;
  const float32 = rowset.float32;
  const offsets = rowset.offsets;
  const b2 = offsets[2];
  const b0 = offsets[0];
  const b1 = offsets[1];
  const b3 = offsets[3];
  const b4 = offsets[4];
  const dictionaries = rowset.dictionaries;
  const d0 = dictionaries[0];
  const d1 = dictionaries[1];
  const len = rowset.count;
  const out = new Array(len);
  for (let i = 0; i < len; i++) {
    out[i] = { "id": int32[b2 + i], "role": d0.values[u8[b0 + i]], "active": u8[b1 + i] !== 0, "score": float32[b3 + i], "note": (((u8[i] >> 0) & 3) === 1 ? null : ((u8[i] >> 0) & 3) === 2 ? d1.values[uint32[b4 + i]] : undefined) };
  }
  return out;
}
return hydrate;",
  "columnarQuery": "function query(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const float32 = rowset.float32;
  const offsets = rowset.offsets;
  const b2 = offsets[2];
  const b0 = offsets[0];
  const b1 = offsets[1];
  const b3 = offsets[3];
  const dictionaries = rowset.dictionaries;
  const len = rowset.count;
  const d0 = dictionaries[0];
  const p0 = d0.ids.get(__q0);
  const p1 = __q1 === true ? 1 : __q1 === false ? 0 : -1;
  const out = new Array(len);
  let j = 0;
  for (let i = 0; i < len; i++) {
    if ((u8[b0 + i] === p0 && u8[b1 + i] === p1)) {
      out[j++] = { "id": int32[b2 + i], "score": float32[b3 + i] };
    }
  }
  out.length = j;
  return out;
}",
  "columnarWriter": "function writeRows(input, len, target, dictionaries) {
  const u8 = target.bytes;
  const int32 = target.int32;
  const uint32 = target.uint32;
  const float32 = target.float32;
  const offsets = target.offsets;
  const b2 = offsets[2];
  const b0 = offsets[0];
  const b1 = offsets[1];
  const b3 = offsets[3];
  const b4 = offsets[4];
  const d0 = dictionaries[0];
  const d1 = dictionaries[1];
  for (let i = 0; i < len; i++) {
    const item = input[i];
    let m0 = 0;
    if (item.note === null) m0 |= 1; else if (item.note !== undefined) m0 |= 2;
    u8[i] = m0;
    int32[b2 + i] = item.id;
    let c0_1 = d0.ids.get(item.role);
    if (c0_1 === undefined) {
      throw new RangeError("jit binary rowset: value not in fixed dictionary for role: " + item.role);
    }
    u8[b0 + i] = c0_1;
    u8[b1 + i] = item.active ? 1 : 0;
    float32[b3 + i] = item.score;
    if (item.note != null) {
      let c1_1 = d1.ids.get(item.note);
      if (c1_1 === undefined) {
        c1_1 = d1.values.length;
        d1.ids.set(item.note, c1_1);
        d1.values[c1_1] = item.note;
      }
      uint32[b4 + i] = c1_1;
    }
  }
}
return writeRows;",
  "hydrate": "function hydrate(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const uint32 = rowset.uint32;
  const float32 = rowset.float32;
  const dictionaries = rowset.dictionaries;
  const d0 = dictionaries[0];
  const d1 = dictionaries[1];
  const len = rowset.count;
  const out = new Array(len);
  let o = 0;
  let w = 0;
  for (let i = 0; i < len; i++) {
    out[i] = { "id": int32[w + 1], "role": d0.values[u8[o + 1]], "active": u8[o + 2] !== 0, "score": float32[w + 2], "note": (((u8[o + 0] >> 0) & 3) === 1 ? null : ((u8[o + 0] >> 0) & 3) === 2 ? d1.values[uint32[w + 3]] : undefined) };
    o += 16;
    w += 4;
  }
  return out;
}
return hydrate;",
  "query": "function query(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const float32 = rowset.float32;
  const dictionaries = rowset.dictionaries;
  const len = rowset.count;
  const d0 = dictionaries[0];
  const p0 = d0.ids.get(__q0);
  const p1 = __q1 === true ? 1 : __q1 === false ? 0 : -1;
  const out = new Array(len);
  let j = 0;
  let o = 0;
  let w = 0;
  for (let i = 0; i < len; i++) {
    if ((u8[o + 1] === p0 && u8[o + 2] === p1)) {
      out[j++] = { "id": int32[w + 1], "score": float32[w + 2] };
    }
    o += 16;
    w += 4;
  }
  out.length = j;
  return out;
}",
  "sum": "function query(rowset) {
  const u8 = rowset.bytes;
  const float32 = rowset.float32;
  const len = rowset.count;
  const p0 = __q0 === true ? 1 : __q0 === false ? 0 : -1;
  let acc = 0;
  let o = 0;
  let w = 0;
  for (let i = 0; i < len; i++) {
    const v = float32[w + 2];
    acc += ((u8[o + 2] === p0 && (v > __q1))) ? v : 0;
    o += 16;
    w += 4;
  }
  return acc;
}",
  "writer": "function writeRows(input, len, target, dictionaries) {
  const u8 = target.bytes;
  const int32 = target.int32;
  const uint32 = target.uint32;
  const float32 = target.float32;
  const d0 = dictionaries[0];
  const d1 = dictionaries[1];
  let o = 0;
  let w = 0;
  for (let i = 0; i < len; i++) {
    const item = input[i];
    let m0 = 0;
    if (item.note === null) m0 |= 1; else if (item.note !== undefined) m0 |= 2;
    u8[o + 0] = m0;
    int32[w + 1] = item.id;
    let c0_1 = d0.ids.get(item.role);
    if (c0_1 === undefined) {
      throw new RangeError("jit binary rowset: value not in fixed dictionary for role: " + item.role);
    }
    u8[o + 1] = c0_1;
    u8[o + 2] = item.active ? 1 : 0;
    float32[w + 2] = item.score;
    if (item.note != null) {
      let c1_12 = d1.ids.get(item.note);
      if (c1_12 === undefined) {
        c1_12 = d1.values.length;
        d1.ids.set(item.note, c1_12);
        d1.values[c1_12] = item.note;
      }
      uint32[w + 3] = c1_12;
    }
    o += 16;
    w += 4;
  }
}
return writeRows;",
}
`;

exports[`generated source snapshots > binary rowset: tagged object union 1`] = `
{
  "hydrate": "function hydrate(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const float32 = rowset.float32;
  const offsets = rowset.offsets;
  const b0 = offsets[0];
  const b1 = offsets[1];
  const b2 = offsets[2];
  const b3 = offsets[3];
  const b4 = offsets[4];
  const dictionaries = rowset.dictionaries;
  const d0 = dictionaries[0];
  const len = rowset.count;
  const out = new Array(len);
  for (let i = 0; i < len; i++) {
    switch (u8[b0 + i]) {
      case 0:
        out[i] = { "kind": d0.values[u8[b0 + i]], "id": int32[b1 + i], "radius": (((u8[i] >> 0) & 3) === 1 ? null : ((u8[i] >> 0) & 3) === 2 ? float32[b2 + i] : undefined) };
        break;
      case 1:
        out[i] = { "kind": d0.values[u8[b0 + i]], "id": int32[b1 + i], "width": (((u8[i] >> 2) & 3) === 1 ? null : ((u8[i] >> 2) & 3) === 2 ? float32[b3 + i] : undefined), "height": (((u8[i] >> 4) & 3) === 1 ? null : ((u8[i] >> 4) & 3) === 2 ? float32[b4 + i] : undefined) };
        break;
      default:
        throw new RangeError("jit binary rowset: invalid union tag");
    }
  }
  return out;
}
return hydrate;",
  "query": "function query(rowset) {
  const u8 = rowset.bytes;
  const int32 = rowset.int32;
  const float32 = rowset.float32;
  const offsets = rowset.offsets;
  const b0 = offsets[0];
  const b1 = offsets[1];
  const b2 = offsets[2];
  const b3 = offsets[3];
  const b4 = offsets[4];
  const dictionaries = rowset.dictionaries;
  const len = rowset.count;
  const d0 = dictionaries[0];
  const p0 = d0.ids.get(__q0);
  const out = new Array(len);
  let j = 0;
  for (let i = 0; i < len; i++) {
    if (u8[b0 + i] === p0) {
      switch (u8[b0 + i]) {
        case 0:
          out[j++] = { "kind": d0.values[u8[b0 + i]], "id": int32[b1 + i], "radius": (((u8[i] >> 0) & 3) === 1 ? null : ((u8[i] >> 0) & 3) === 2 ? float32[b2 + i] : undefined) };
          break;
        case 1:
          out[j++] = { "kind": d0.values[u8[b0 + i]], "id": int32[b1 + i], "width": (((u8[i] >> 2) & 3) === 1 ? null : ((u8[i] >> 2) & 3) === 2 ? float32[b3 + i] : undefined), "height": (((u8[i] >> 4) & 3) === 1 ? null : ((u8[i] >> 4) & 3) === 2 ? float32[b4 + i] : undefined) };
          break;
        default:
          throw new RangeError("jit binary rowset: invalid union tag");
      }
    }
  }
  out.length = j;
  return out;
}",
  "writer": "function writeRows(input, len, target, dictionaries) {
  const u8 = target.bytes;
  const int32 = target.int32;
  const float32 = target.float32;
  const offsets = target.offsets;
  const b0 = offsets[0];
  const b1 = offsets[1];
  const b2 = offsets[2];
  const b3 = offsets[3];
  const b4 = offsets[4];
  const d0 = dictionaries[0];
  for (let i = 0; i < len; i++) {
    const item = input[i];
    let m0 = 0;
    if (item.radius === null) m0 |= 1; else if (item.radius !== undefined) m0 |= 2;
    if (item.width === null) m0 |= 4; else if (item.width !== undefined) m0 |= 8;
    if (item.height === null) m0 |= 16; else if (item.height !== undefined) m0 |= 32;
    u8[i] = m0;
    let c0_1 = d0.ids.get(item.kind);
    if (c0_1 === undefined) {
      throw new RangeError("jit binary rowset: value not in fixed dictionary for kind: " + item.kind);
    }
    u8[b0 + i] = c0_1;
    int32[b1 + i] = item.id;
    if (item.radius != null) {
      float32[b2 + i] = item.radius;
    }
    if (item.width != null) {
      float32[b3 + i] = item.width;
    }
    if (item.height != null) {
      float32[b4 + i] = item.height;
    }
  }
}
return writeRows;",
}
`;

exports[`generated source snapshots > codec v2: discriminated union, optional bitmask, and collections 1`] = `
"function _write(value, u8, dv, o) {
  let m1 = 0;
  if (value.pressure === null) m1 |= 1; else if (value.pressure !== undefined) m1 |= 2;
  if (value.trace === null) m1 |= 4; else if (value.trace !== undefined) m1 |= 8;
  dv.setUint8(o, m1); o += 1;
  if (value.seq !== (value.seq | 0)) {
    throw new RangeError("jit codec: int32 overflow: " + value.seq);
  }
  dv.setInt32(o, value.seq, true); o += 4;
  dv.setFloat64(o, value.at.getTime(), true); o += 8;
  if (value.pressure != null) {
    dv.setFloat64(o, value.pressure, true); o += 8;
  }
  if (value.trace != null) {
    const w2 = __enc.encodeInto(value.trace, u8.subarray(o + 4));
    if (w2.read !== value.trace.length) {
      throw new RangeError("jit codec: target buffer too small");
    }
    dv.setUint32(o, w2.written, true); o += 4 + w2.written;
  }
  const v3 = value.payload;
  const t4 = v3.kind;
  if (t4 === "click") {
    dv.setUint8(o, 0); o += 1;
    dv.setFloat64(o, v3.x, true); o += 8;
    dv.setFloat64(o, v3.y, true); o += 8;
  } else if (t4 === "key") {
    dv.setUint8(o, 1); o += 1;
    const w5 = __enc.encodeInto(v3.code, u8.subarray(o + 4));
    if (w5.read !== v3.code.length) {
      throw new RangeError("jit codec: target buffer too small");
    }
    dv.setUint32(o, w5.written, true); o += 4 + w5.written;
  } else {
    throw new RangeError("jit codec: unknown discriminator value: " + t4);
  }
  const v6 = value.tags;
  dv.setUint32(o, v6.size, true); o += 4;
  for (const e7 of v6) {
    const w8 = __enc.encodeInto(e7, u8.subarray(o + 4));
    if (w8.read !== e7.length) {
      throw new RangeError("jit codec: target buffer too small");
    }
    dv.setUint32(o, w8.written, true); o += 4 + w8.written;
  }
  return o;
}
function encode(value) {
  let size = 1;
  size += 1;
  size += 4;
  size += 8;
  if (value.pressure != null) {
    size += 8;
  }
  if (value.trace != null) {
    size += 4 + value.trace.length * 3;
  }
  const v9 = value.payload;
  const t10 = v9.kind;
  size += 1;
  if (t10 === "click") {
    size += 8;
    size += 8;
  } else if (t10 === "key") {
    size += 4 + v9.code.length * 3;
  } else {
    throw new RangeError("jit codec: unknown discriminator value: " + t10);
  }
  const v11 = value.tags;
  size += 4;
  for (const e12 of v11) {
    size += 4 + e12.length * 3;
  }
  const buf = new ArrayBuffer(size);
  const dv = new DataView(buf);
  const u8 = new Uint8Array(buf);
  u8[0] = 1;
  return u8.subarray(0, _write(value, u8, dv, 1));
}
function encodeInto(value, target) {
  if (!(target instanceof Uint8Array)) {
    throw new TypeError("jit codec: encodeInto target must be a Uint8Array");
  }
  if (target.length < 1) throw new RangeError("jit codec: target buffer too small");
  const dv = new DataView(target.buffer, target.byteOffset, target.byteLength);
  target[0] = 1;
  return _write(value, target, dv, 1);
}
function decode(input) {
  const u8 = input instanceof Uint8Array ? input : new Uint8Array(input);
  const dv = new DataView(u8.buffer, u8.byteOffset, u8.byteLength);
  if (u8.length < 1 || u8[0] !== 1) {
    throw new RangeError("jit codec: schema version mismatch: expected 1, got " + (u8.length < 1 ? "empty buffer" : u8[0]));
  }
  let o = 1;
  const m13 = dv.getUint8(o); o += 1;
  const n14 = dv.getInt32(o, true); o += 4;
  const d15 = new Date(dv.getFloat64(o, true)); o += 8;
  const s16 = (m13 >> 0) & 3;
  let r17;
  if (s16 === 1) {
    r17 = null;
  } else if (s16 === 2) {
    const n18 = dv.getFloat64(o, true); o += 8;
    r17 = n18;
  }
  const s19 = (m13 >> 2) & 3;
  let r20;
  if (s19 === 1) {
    r20 = null;
  } else if (s19 === 2) {
    const l21 = dv.getUint32(o, true); o += 4;
    if (o + l21 > u8.length) throw new RangeError("jit codec: truncated buffer");
    const t22 = __dec.decode(u8.subarray(o, o + l21)); o += l21;
    r20 = t22;
  }
  const t23 = dv.getUint8(o); o += 1;
  let r24;
  if (t23 === 0) {
    const n25 = dv.getFloat64(o, true); o += 8;
    const n26 = dv.getFloat64(o, true); o += 8;
    r24 = { "kind": "click", "x": n25, "y": n26 };
  } else if (t23 === 1) {
    const l27 = dv.getUint32(o, true); o += 4;
    if (o + l27 > u8.length) throw new RangeError("jit codec: truncated buffer");
    const t28 = __dec.decode(u8.subarray(o, o + l27)); o += l27;
    r24 = { "kind": "key", "code": t28 };
  } else {
    throw new RangeError("jit codec: invalid union tag: " + t23);
  }
  const l29 = dv.getUint32(o, true); o += 4;
  const a30 = new Set();
  for (let i31 = 0; i31 < l29; i31++) {
    const l32 = dv.getUint32(o, true); o += 4;
    if (o + l32 > u8.length) throw new RangeError("jit codec: truncated buffer");
    const t33 = __dec.decode(u8.subarray(o, o + l32)); o += l32;
    a30.add(t33);
  }
  return { "seq": n14, "at": d15, "pressure": r17, "trace": r20, "payload": r24, "tags": a30 };
}
return { encode: encode, encodeInto: encodeInto, decode: decode };"
`;

exports[`generated source snapshots > lazy query and chunked JSON backends 1`] = `
{
  "iterator": "(function() {
function* stage0(input, params) {
  let count2 = 0;
  if (Array.isArray(input)) {
    for (let i = 0, len = input.length; i < len; i++) {
      const item = input[i];
      let output = item;
      if (!(item.role === __q0)) continue;
      output = { "id": item.id, "name": item.name };
      if (count2++ === 10) return;
      yield output;
    }
    return;
  }
  for (const item of input) {
    let output = item;
    if (!(item.role === __q0)) continue;
    output = { "id": item.id, "name": item.name };
    if (count2++ === 10) return;
    yield output;
  }
}
function query(input) {
  return stage0(input, undefined);
}
return query;
})()",
  "stringifyChunks": "(function () {
const stringifyElement = (function () {
  const __se = /[\\u0000-\\u001f\\u0022\\u005c\\ud800-\\udfff]/;
  function str(value) {
    const len = value.length;
    if (len < 42) {
      for (let i = 0; i < len; i++) {
        const code = value.charCodeAt(i);
        if (code < 32 || code === 34 || code === 92 || (code > 55295 && code < 57344)) {
          return JSON.stringify(value);
        }
      }
      return '"' + value + '"';
    }
    if (__se.test(value)) return JSON.stringify(value);
    return '"' + value + '"';
  }
  function stringify(value) {
    let s = "";
    s += "{";
    s += "\\"id\\":";
    s += Number.isFinite(value.id) ? "" + value.id : "null";
    s += ",\\"name\\":";
    s += str(value.name);
    s += ",\\"email\\":";
    s += str(value.email);
    s += ",\\"role\\":";
    s += JSON.stringify(value.role) ?? "null";
    s += ",\\"score\\":";
    if (value.score == null) {
      s += "null";
    } else {
      s += Number.isFinite(value.score) ? "" + value.score : "null";
    }
    s += ",\\"tags\\":";
    const v1 = value.tags;
    s += "[";
    for (let i2 = 0; i2 < v1.length; i2++) {
      if (i2 !== 0) s += ",";
      const e3 = v1[i2];
      s += str(e3);
    }
    s += "]";
    s += "}";
    return s;
  }
  return stringify;
})();
function* stringifyChunks(value) {
  let chunk = "[";
  for (let i = 0, len = value.length; i < len; i++) {
    const part = (i === 0 ? "" : ",") + stringifyElement(value[i]);
    if (chunk.length !== 0 && chunk.length + part.length > 1024) {
      yield chunk;
      chunk = part;
    } else {
      chunk += part;
    }
  }
  chunk += "]";
  yield chunk;
}
return stringifyChunks;
})()",
}
`;

exports[`generated source snapshots > mapper: renames, nested objects, and fused many() 1`] = `
"{
  map: function map(source) {
    return { "id": source.id, "name": source.fullName, "profile": { "age": source.profile.age, "city": source.profile.city } };
  },
  many: function many(list) {
    const len = list.length;
    const out = new Array(len);
    for (let i = 0; i < len; i++) {
      const source = list[i];
      out[i] = { "id": source.id, "name": source.fullName, "profile": { "age": source.profile.age, "city": source.profile.city } };
    }
    return out;
  }
}"
`;

exports[`generated source snapshots > query: filter with nested and/or/not + select + unique + orderBy 1`] = `
"function query(value) {
  const len = value.length;
  const seen = new Set();
  const out = new Array(len);
  let j = 0;
  for (let i = 0; i < len; i++) {
    const item = value[i];
    if ((item.role !== __q0) && ((item.id > __q1 || item.role === __q2))) {
      const uniqueKey = item.id;
      if (!seen.has(uniqueKey)) {
        seen.add(uniqueKey);
        out[j++] = { "id": item.id, "name": item.name, "role": item.role };
      }
    }
  }
  out.length = j;
  out.sort((left, right) => {
    const leftValue = left.name;
    const rightValue = right.name;
    if (leftValue === rightValue) return 0;
    return leftValue < rightValue ? -1 : 1;
  });
  return out;
}"
`;

exports[`generated source snapshots > query: filtered aggregation 1`] = `
"function query(value) {
  const len = value.length;
  let acc = 0;
  let n = 0;
  for (let i = 0; i < len; i++) {
    const item = value[i];
    if ((item.role === __q0)) {
      acc = (acc + item.id);
      n = (n + 1);
    }
  }
  if (n === 0) {
    return undefined;
  }
  return (acc / n);
}"
`;

exports[`generated source snapshots > query: groupBy after filter 1`] = `
"function query(value) {
  const len = value.length;
  const out = Object.create(null);
  for (let i = 0; i < len; i++) {
    const item = value[i];
    if ((item.id >= __q0)) {
      const collectKey = item.role;
      let group = out[collectKey];
      if (group === undefined) {
        group = [];
        out[collectKey] = group;
      }
      group[group.length] = item;
    }
  }
  return out;
}"
`;

exports[`generated source snapshots > serializer: nested objects, optionals, records, and arrays 1`] = `
"(function () {
  const __se = /[\\u0000-\\u001f\\u0022\\u005c\\ud800-\\udfff]/;
  function str(value) {
    const len = value.length;
    if (len < 42) {
      for (let i = 0; i < len; i++) {
        const code = value.charCodeAt(i);
        if (code < 32 || code === 34 || code === 92 || (code > 55295 && code < 57344)) {
          return JSON.stringify(value);
        }
      }
      return '"' + value + '"';
    }
    if (__se.test(value)) return JSON.stringify(value);
    return '"' + value + '"';
  }
  function stringify(value) {
    let s = "";
    s += "{";
    s += "\\"title\\":";
    s += str(value.title);
    s += ",\\"owner\\":";
    const v1 = value.owner;
    s += "{";
    s += "\\"id\\":";
    s += Number.isFinite(v1.id) ? "" + v1.id : "null";
    s += ",\\"name\\":";
    s += str(v1.name);
    s += "}";
    s += ",\\"counts\\":";
    const v2 = value.counts;
    s += "{";
    const k3 = Object.keys(v2);
    for (let i4 = 0; i4 < k3.length; i4++) {
      if (i4 !== 0) s += ",";
      s += str(k3[i4]) + ":";
      const e5 = v2[k3[i4]];
      s += Number.isFinite(e5) ? "" + e5 : "null";
    }
    s += "}";
    if (value.note !== undefined) {
      s += ",\\"note\\":";
      if (value.note == null) {
        s += "null";
      } else {
        s += str(value.note);
      }
    }
    s += ",\\"rows\\":";
    const v6 = value.rows;
    s += "[";
    for (let i7 = 0; i7 < v6.length; i7++) {
      if (i7 !== 0) s += ",";
      const e8 = v6[i7];
      s += "{";
      s += "\\"label\\":";
      s += str(e8.label);
      s += ",\\"value\\":";
      s += Number.isFinite(e8.value) ? "" + e8.value : "null";
      s += "}";
    }
    s += "]";
    s += "}";
    return s;
  }
  return stringify;
})()"
`;

exports[`generated source snapshots > validator: ISO namespace schemas 1`] = `
"function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.date;
  if (typeof v3 !== "string") {
    return false;
  }
  if (!__v0.test(v3)) {
    return false;
  }
  let v5 = v1.time;
  if (typeof v5 !== "string") {
    return false;
  }
  if (!__v1.test(v5)) {
    return false;
  }
  let v7 = v1.at;
  if (typeof v7 !== "string") {
    return false;
  }
  if (!__v2.test(v7)) {
    return false;
  }
  let v9 = v1.ttl;
  if (typeof v9 !== "string") {
    return false;
  }
  if (!__v3.test(v9)) {
    return false;
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v3 = v1.date;
    let o4 = v3;
    if (typeof v3 !== "string") {
      issues[issues.length] = { path: "date", code: "expected_string", expected: "string", message: "expected string", received: typeof v3 };
    } else {
      if (!__v0.test(v3)) {
        issues[issues.length] = { path: "date", code: "invalid_format", expected: "date", message: "expected a valid date" };
      }
    }
    o4 = v3;
    let v5 = v1.time;
    let o6 = v5;
    if (typeof v5 !== "string") {
      issues[issues.length] = { path: "time", code: "expected_string", expected: "string", message: "expected string", received: typeof v5 };
    } else {
      if (!__v1.test(v5)) {
        issues[issues.length] = { path: "time", code: "invalid_format", expected: "time", message: "expected a valid time" };
      }
    }
    o6 = v5;
    let v7 = v1.at;
    let o8 = v7;
    if (typeof v7 !== "string") {
      issues[issues.length] = { path: "at", code: "expected_string", expected: "string", message: "expected string", received: typeof v7 };
    } else {
      if (!__v2.test(v7)) {
        issues[issues.length] = { path: "at", code: "invalid_format", expected: "datetime", message: "expected a valid datetime" };
      }
    }
    o8 = v7;
    let v9 = v1.ttl;
    let o10 = v9;
    if (typeof v9 !== "string") {
      issues[issues.length] = { path: "ttl", code: "expected_string", expected: "string", message: "expected string", received: typeof v9 };
    } else {
      if (!__v3.test(v9)) {
        issues[issues.length] = { path: "ttl", code: "invalid_format", expected: "duration", message: "expected a valid duration" };
      }
    }
    o10 = v9;
  }
  o2 = v1;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: Temporal API schemas 1`] = `
"function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.at;
  if (!(globalThis.Temporal !== undefined && v3 instanceof globalThis.Temporal.Instant)) {
    return false;
  }
  let v5 = v1.date;
  if (!(globalThis.Temporal !== undefined && v5 instanceof globalThis.Temporal.PlainDate)) {
    return false;
  }
  let v7 = v1.duration;
  if (!(globalThis.Temporal !== undefined && v7 instanceof globalThis.Temporal.Duration)) {
    return false;
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v3 = v1.at;
    let o4 = v3;
    if (!(globalThis.Temporal !== undefined && v3 instanceof globalThis.Temporal.Instant)) {
      issues[issues.length] = { path: "at", code: "invalid_temporal", expected: "Temporal.Instant", message: "expected Temporal.Instant" };
    } else {
    }
    o4 = v3;
    let v5 = v1.date;
    let o6 = v5;
    if (!(globalThis.Temporal !== undefined && v5 instanceof globalThis.Temporal.PlainDate)) {
      issues[issues.length] = { path: "date", code: "invalid_temporal", expected: "Temporal.PlainDate", message: "expected Temporal.PlainDate" };
    } else {
    }
    o6 = v5;
    let v7 = v1.duration;
    let o8 = v7;
    if (!(globalThis.Temporal !== undefined && v7 instanceof globalThis.Temporal.Duration)) {
      issues[issues.length] = { path: "duration", code: "invalid_temporal", expected: "Temporal.Duration", message: "expected Temporal.Duration" };
    } else {
    }
    o8 = v7;
  }
  o2 = v1;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: bidirectional value codec 1`] = `
"function is(value) {
  let v1 = value;
  let v3 = v1;
  if (typeof v3 !== "string") {
    return false;
  }
  if (!__v0.test(v3)) {
    return false;
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  let v3 = v1;
  let o4 = v3;
  if (typeof v3 !== "string") {
    issues[issues.length] = { path: "", code: "expected_string", expected: "string", message: "expected string", received: typeof v3 };
  } else {
    if (!__v0.test(v3)) {
      issues[issues.length] = { path: "", code: "invalid_format", expected: "datetime", message: "expected a valid datetime" };
    }
  }
  o4 = v3;
  let c5;
  try {
    c5 = __v1(o4);
  } catch {
    issues[issues.length] = { path: "", code: "invalid_codec", expected: "codec decode", message: "codec decode failed" };
  }
  let v6 = c5;
  let o7 = v6;
  if (!(v6 instanceof Date) || v6.getTime() !== v6.getTime()) {
    issues[issues.length] = { path: "", code: "invalid_date", expected: "Date", message: "expected a valid Date" };
  } else {
  }
  o7 = v6;
  o2 = o7;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: conditional fields, logical schemas, and temporal checks 1`] = `
"function iu1(value) {
  let v11 = value;
  if (typeof v11 !== "string") {
    return false;
  }
  return true;
}
function iu2(value) {
  let v13 = value;
  if (typeof v13 !== "string") {
    return false;
  }
  if (v13.length < 8) {
    return false;
  }
  return true;
}
function iu3(value) {
  let v17 = value;
  if (v17 !== "blocked") {
    return false;
  }
  return true;
}
function pu1(value) {
  let v12 = value;
  if (typeof v12 !== "string") {
    return false;
  }
  return true;
}
function pu2(value) {
  let v14 = value;
  if (typeof v14 !== "string") {
    return false;
  }
  if (v14.length < 8) {
    return false;
  }
  return true;
}
function pu3(value) {
  let v18 = value;
  if (v18 !== "blocked") {
    return false;
  }
  return true;
}
function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.temDesconto;
  if (typeof v3 !== "boolean") {
    return false;
  }
  if (v1.temDesconto === true) {
    let v5 = v1.cupom;
    if (typeof v5 !== "string") {
      return false;
    }
    if (v5.length < 3) {
      return false;
    }
  } else {
    let v7 = v1.cupom;
    if (v7 !== undefined) {
      if (typeof v7 !== "string") {
        return false;
      }
    }
  }
  let v9 = v1.ref;
  if ((iu1(v9) ? 1 : 0) + (iu2(v9) ? 1 : 0) !== 1) {
    return false;
  }
  let v15 = v1.status;
  if (iu3(v15)) {
    return false;
  }
  let v19 = v1.at;
  if (!(v19 instanceof Date) || v19.getTime() !== v19.getTime()) {
    return false;
  }
  if (v19.getTime() < 1782864000000 || v19.getTime() > 1785542399999) {
    return false;
  }
  if (v19.getSeconds() !== 0 || v19.getMilliseconds() !== 0) {
    return false;
  }
  let v21 = v1.day;
  if (!(globalThis.Temporal !== undefined && v21 instanceof globalThis.Temporal.PlainDate)) {
    return false;
  }
  if (typeof v21.dayOfWeek !== "number" || (v21.dayOfWeek !== 1 && v21.dayOfWeek !== 2 && v21.dayOfWeek !== 3 && v21.dayOfWeek !== 4 && v21.dayOfWeek !== 5)) {
    return false;
  }
  if (typeof v21.month !== "number" || (v21.month !== 7)) {
    return false;
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v3 = v1.temDesconto;
    let o4 = v3;
    if (typeof v3 !== "boolean") {
      issues[issues.length] = { path: "temDesconto", code: "expected_boolean", expected: "boolean", message: "expected boolean" };
    }
    o4 = v3;
    let w5;
    if (v1.temDesconto === true) {
      let v6 = v1.cupom;
      let o7 = v6;
      if (typeof v6 !== "string") {
        issues[issues.length] = { path: "cupom", code: "expected_string", expected: "string", message: "expected string", received: typeof v6 };
      } else {
        if (v6.length < 3) {
          issues[issues.length] = { path: "cupom", code: "too_small", expected: "length >= 3", message: "expected at least 3 characters" };
        }
      }
      o7 = v6;
      w5 = o7;
    } else {
      let v8 = v1.cupom;
      let o9 = v8;
      if (v8 !== undefined) {
        if (typeof v8 !== "string") {
          issues[issues.length] = { path: "cupom", code: "expected_string", expected: "string", message: "expected string", received: typeof v8 };
        } else {
        }
        o9 = v8;
      }
      w5 = o9;
    }
    let v10 = v1.ref;
    let o11 = v10;
    if ((pu1(v10) ? 1 : 0) + (pu2(v10) ? 1 : 0) !== 1) {
      issues[issues.length] = { path: "ref", code: "invalid_xor", expected: "exactly one schema", message: "value must match exactly one schema" };
    }
    o11 = v10;
    let v16 = v1.status;
    let o17 = v16;
    if (pu3(v16)) {
      issues[issues.length] = { path: "status", code: "invalid_not", expected: "not", message: "value matched a forbidden schema" };
    }
    o17 = v16;
    let v20 = v1.at;
    let o21 = v20;
    if (!(v20 instanceof Date) || v20.getTime() !== v20.getTime()) {
      issues[issues.length] = { path: "at", code: "invalid_date", expected: "Date", message: "expected a valid Date" };
    } else {
      if (v20.getTime() < 1782864000000 || v20.getTime() > 1785542399999) {
        issues[issues.length] = { path: "at", code: "out_of_range", expected: "2026-07-01T00:00:00.000Z..2026-07-31T23:59:59.999Z", message: "expected a value between 2026-07-01T00:00:00.000Z and 2026-07-31T23:59:59.999Z" };
      }
      if (v20.getSeconds() !== 0 || v20.getMilliseconds() !== 0) {
        issues[issues.length] = { path: "at", code: "invalid_precision", expected: "minute", message: "expected value truncated to minute" };
      }
    }
    o21 = v20;
    let v22 = v1.day;
    let o23 = v22;
    if (!(globalThis.Temporal !== undefined && v22 instanceof globalThis.Temporal.PlainDate)) {
      issues[issues.length] = { path: "day", code: "invalid_temporal", expected: "Temporal.PlainDate", message: "expected Temporal.PlainDate" };
    } else {
      if (typeof v22.dayOfWeek !== "number" || (v22.dayOfWeek !== 1 && v22.dayOfWeek !== 2 && v22.dayOfWeek !== 3 && v22.dayOfWeek !== 4 && v22.dayOfWeek !== 5)) {
        issues[issues.length] = { path: "day", code: "invalid_day_of_week", expected: "1 | 2 | 3 | 4 | 5", message: "expected an allowed day of week" };
      }
      if (typeof v22.month !== "number" || (v22.month !== 7)) {
        issues[issues.length] = { path: "day", code: "invalid_month_of_year", expected: "7", message: "expected an allowed month" };
      }
    }
    o23 = v22;
  }
  o2 = v1;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: deep unions, formats, coercion, transforms, and messages 1`] = `
"function iu1(value) {
  let v9 = value;
  if (v9 === null || typeof v9 !== "object" || Array.isArray(v9)) {
    return false;
  }
  let v11 = v9.kind;
  if (v11 !== "pix") {
    return false;
  }
  let v13 = v9.key;
  if (typeof v13 !== "string") {
    return false;
  }
  if (!__v1.test(v13)) {
    return false;
  }
  return true;
}
function iu2(value) {
  let v15 = value;
  if (v15 === null || typeof v15 !== "object" || Array.isArray(v15)) {
    return false;
  }
  let v17 = v15.kind;
  if (v17 !== "card") {
    return false;
  }
  let v19 = v15.last4;
  if (typeof v19 !== "string") {
    return false;
  }
  if (v19.length !== 4) {
    return false;
  }
  return true;
}
function pu1(value) {
  let v10 = value;
  if (v10 === null || typeof v10 !== "object" || Array.isArray(v10)) {
    return false;
  }
  let v12 = v10.kind;
  if (v12 !== "pix") {
    return false;
  }
  let v14 = v10.key;
  if (typeof v14 !== "string") {
    return false;
  }
  if (!__v1.test(v14)) {
    return false;
  }
  return true;
}
function pu2(value) {
  let v16 = value;
  if (v16 === null || typeof v16 !== "object" || Array.isArray(v16)) {
    return false;
  }
  let v18 = v16.kind;
  if (v18 !== "card") {
    return false;
  }
  let v20 = v16.last4;
  if (typeof v20 !== "string") {
    return false;
  }
  if (v20.length !== 4) {
    return false;
  }
  return true;
}
function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.id;
  if (typeof v3 !== "string") {
    return false;
  }
  if (!__v0.test(v3)) {
    return false;
  }
  let v5 = v1.amount;
  v5 = Number(v5);
  if (typeof v5 !== "number") {
    return false;
  }
  if (v5 <= 0) {
    return false;
  }
  let v7 = v1.method;
  if (!(iu1(v7) || iu2(v7))) {
    return false;
  }
  let v21 = v1.note;
  if (v21 !== undefined) {
    if (typeof v21 !== "string") {
      return false;
    }
    v21 = v21.trim();
    if (v21.length > 140) {
      return false;
    }
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  let b3;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v4 = v1.id;
    let o5 = v4;
    if (typeof v4 !== "string") {
      issues[issues.length] = { path: "id", code: "expected_string", expected: "string", message: "expected string", received: typeof v4 };
    } else {
      if (!__v0.test(v4)) {
        issues[issues.length] = { path: "id", code: "invalid_format", expected: "ulid", message: "id deve ser ULID" };
      }
    }
    o5 = v4;
    let v6 = v1.amount;
    let o7 = v6;
    v6 = Number(v6);
    if (typeof v6 !== "number") {
      issues[issues.length] = { path: "amount", code: "expected_number", expected: "number", message: "expected number", received: typeof v6 };
    } else {
      if (v6 <= 0) {
        issues[issues.length] = { path: "amount", code: "not_positive", expected: "> 0", message: "valor deve ser positivo" };
      }
    }
    o7 = v6;
    let v8 = v1.method;
    let o9 = v8;
    if (!(pu1(v8) || pu2(v8))) {
      issues[issues.length] = { path: "method", code: "invalid_union", expected: "union", message: "value matched no union option" };
    }
    o9 = v8;
    let v22 = v1.note;
    let o23 = v22;
    if (v22 !== undefined) {
      if (typeof v22 !== "string") {
        issues[issues.length] = { path: "note", code: "expected_string", expected: "string", message: "expected string", received: typeof v22 };
      } else {
        v22 = v22.trim();
        if (v22.length > 140) {
          issues[issues.length] = { path: "note", code: "too_big", expected: "length <= 140", message: "expected at most 140 characters" };
        }
      }
      o23 = v22;
    }
    b3 = { "id": o5, "amount": o7, "method": o9, "note": o23 };
  }
  if (b3 === undefined) { b3 = v1; }
  o2 = b3;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: json, custom, and template literal schemas 1`] = `
"function ij1(value) {
  if (value === null) return true;
  const type = typeof value;
  if (type === "string" || type === "boolean") return true;
  if (type === "number") return Number.isFinite(value);
  if (Array.isArray(value)) {
    for (let i = 0; i < value.length; i++) {
      if (!ij1(value[i])) return false;
    }
    return true;
  }
  if (type !== "object") return false;
  const proto = Object.getPrototypeOf(value);
  if (proto !== Object.prototype && proto !== null) return false;
  const keys = Object.keys(value);
  for (let i = 0; i < keys.length; i++) {
    if (!ij1(value[keys[i]])) return false;
  }
  return true;
}
function pj1(value) {
  if (value === null) return true;
  const type = typeof value;
  if (type === "string" || type === "boolean") return true;
  if (type === "number") return Number.isFinite(value);
  if (Array.isArray(value)) {
    for (let i = 0; i < value.length; i++) {
      if (!pj1(value[i])) return false;
    }
    return true;
  }
  if (type !== "object") return false;
  const proto = Object.getPrototypeOf(value);
  if (proto !== Object.prototype && proto !== null) return false;
  const keys = Object.keys(value);
  for (let i = 0; i < keys.length; i++) {
    if (!pj1(value[keys[i]])) return false;
  }
  return true;
}
function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.data;
  if (!ij1(v3)) {
    return false;
  }
  let v5 = v1.external;
  if (!__v0(v5)) {
    return false;
  }
  let v7 = v1.greeting;
  if (typeof v7 !== "string") {
    return false;
  }
  if (!__v2.test(v7)) {
    return false;
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v3 = v1.data;
    let o4 = v3;
    if (!pj1(v3)) {
      issues[issues.length] = { path: "data", code: "invalid_json", expected: "JSON value", message: "expected a JSON-encodable value" };
    }
    o4 = v3;
    let v5 = v1.external;
    let o6 = v5;
    if (!__v0(v5)) {
      issues[issues.length] = { path: "external", code: "custom", expected: "custom", message: "custom predicate rejected the value" };
    }
    o6 = v5;
    let v7 = v1.greeting;
    let o8 = v7;
    if (typeof v7 !== "string") {
      issues[issues.length] = { path: "greeting", code: "expected_string", expected: "string", message: "expected string", received: typeof v7 };
    } else {
      if (!__v1.test(v7)) {
        issues[issues.length] = { path: "greeting", code: "invalid_template_literal", expected: "template literal", message: "expected a matching template literal string" };
      }
    }
    o8 = v7;
  }
  o2 = v1;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: strict checks, masks, noEmpty, and conditional refine 1`] = `
"function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.kind;
  if (typeof v3 !== "string") {
    return false;
  }
  if (v3 !== "admin" && v3 !== "user") {
    return false;
  }
  let v5 = v1.age;
  if (typeof v5 !== "number") {
    return false;
  }
  if (v5 <= 17) {
    return false;
  }
  if (v5 >= 130) {
    return false;
  }
  if (!Number.isInteger(v5) || v5 < -2147483648 || v5 > 2147483647) {
    return false;
  }
  let v7 = v1.cpf;
  if (typeof v7 !== "string") {
    return false;
  }
  v7 = v7.replace(/\\D+/g, "");
  if (v7.length !== 11) {
    return false;
  }
  if (v7.length === 11) {
    v7 = v7[0] + v7[1] + v7[2] + "." + v7[3] + v7[4] + v7[5] + "." + v7[6] + v7[7] + v7[8] + "-" + v7[9] + v7[10];
  }
  let v9 = v1.phone;
  if (typeof v9 !== "string") {
    return false;
  }
  v9 = v9.replace(/\\D+/g, "");
  if (v9.length !== 10 && v9.length !== 11) {
    return false;
  }
  if (v9.length === 10) {
    v9 = "(" + v9[0] + v9[1] + ")" + " " + v9[2] + v9[3] + v9[4] + v9[5] + "-" + v9[6] + v9[7] + v9[8] + v9[9];
  } else if (v9.length === 11) {
    v9 = "(" + v9[0] + v9[1] + ")" + " " + v9[2] + v9[3] + v9[4] + v9[5] + v9[6] + "-" + v9[7] + v9[8] + v9[9] + v9[10];
  }
  let v11 = v1.invite;
  if (v11 === "") {
    v11 = undefined;
  }
  if (v11 !== undefined) {
    if (typeof v11 !== "string") {
      return false;
    }
  }
  let v13 = v1.credentials;
  if (v13 === null || typeof v13 !== "object" || Array.isArray(v13)) {
    return false;
  }
  let v15 = v13.password;
  if (typeof v15 !== "string") {
    return false;
  }
  if (v15.length < 8) {
    return false;
  }
  let v17 = v13.confirmPassword;
  if (typeof v17 !== "string") {
    return false;
  }
  if (v17.length < 8) {
    return false;
  }
  if (__v1({ value: v13 })) {
    if (!__v0(v13)) {
      return false;
    }
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  let b3;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v4 = v1.kind;
    let o5 = v4;
    if (typeof v4 !== "string") {
      issues[issues.length] = { path: "kind", code: "expected_string", expected: "string", message: "expected string", received: typeof v4 };
    } else {
      if (v4 !== "admin" && v4 !== "user") {
        issues[issues.length] = { path: "kind", code: "invalid_enum", expected: "admin | user", message: "expected one of the allowed values" };
      }
    }
    o5 = v4;
    let v6 = v1.age;
    let o7 = v6;
    if (typeof v6 !== "number") {
      issues[issues.length] = { path: "age", code: "expected_number", expected: "number", message: "expected number", received: typeof v6 };
    } else {
      if (v6 <= 17) {
        issues[issues.length] = { path: "age", code: "too_small", expected: "> 17", message: "expected a number > 17" };
      }
      if (v6 >= 130) {
        issues[issues.length] = { path: "age", code: "too_big", expected: "< 130", message: "expected a number < 130" };
      }
      if (!Number.isInteger(v6) || v6 < -2147483648 || v6 > 2147483647) {
        issues[issues.length] = { path: "age", code: "not_int32", expected: "int32", message: "expected a 32-bit signed integer" };
      }
    }
    o7 = v6;
    let v8 = v1.cpf;
    let o9 = v8;
    if (typeof v8 !== "string") {
      issues[issues.length] = { path: "cpf", code: "expected_string", expected: "string", message: "expected string", received: typeof v8 };
    } else {
      v8 = v8.replace(/\\D+/g, "");
      if (v8.length !== 11) {
        issues[issues.length] = { path: "cpf", code: "invalid_format", expected: "length === 11", message: "expected 11 characters before formatting" };
      }
      if (v8.length === 11) {
        v8 = v8[0] + v8[1] + v8[2] + "." + v8[3] + v8[4] + v8[5] + "." + v8[6] + v8[7] + v8[8] + "-" + v8[9] + v8[10];
      }
    }
    o9 = v8;
    let v10 = v1.phone;
    let o11 = v10;
    if (typeof v10 !== "string") {
      issues[issues.length] = { path: "phone", code: "expected_string", expected: "string", message: "expected string", received: typeof v10 };
    } else {
      v10 = v10.replace(/\\D+/g, "");
      if (v10.length !== 10 && v10.length !== 11) {
        issues[issues.length] = { path: "phone", code: "invalid_format", expected: "Brazilian phone with 10 or 11 digits", message: "expected a Brazilian phone number" };
      }
      if (v10.length === 10) {
        v10 = "(" + v10[0] + v10[1] + ")" + " " + v10[2] + v10[3] + v10[4] + v10[5] + "-" + v10[6] + v10[7] + v10[8] + v10[9];
      } else if (v10.length === 11) {
        v10 = "(" + v10[0] + v10[1] + ")" + " " + v10[2] + v10[3] + v10[4] + v10[5] + v10[6] + "-" + v10[7] + v10[8] + v10[9] + v10[10];
      }
    }
    o11 = v10;
    let v12 = v1.invite;
    let o13 = v12;
    if (v12 === "") {
      v12 = undefined;
      o13 = v12;
    }
    if (v12 !== undefined) {
      if (typeof v12 !== "string") {
        issues[issues.length] = { path: "invite", code: "expected_string", expected: "string", message: "expected string", received: typeof v12 };
      } else {
      }
      o13 = v12;
    }
    let v14 = v1.credentials;
    let o15 = v14;
    if (v14 === null || typeof v14 !== "object" || Array.isArray(v14)) {
      issues[issues.length] = { path: "credentials", code: "expected_object", expected: "object", message: "expected object", received: typeof v14 };
    } else {
      let v16 = v14.password;
      let o17 = v16;
      if (typeof v16 !== "string") {
        issues[issues.length] = { path: "credentials.password", code: "expected_string", expected: "string", message: "expected string", received: typeof v16 };
      } else {
        if (v16.length < 8) {
          issues[issues.length] = { path: "credentials.password", code: "too_small", expected: "length >= 8", message: "expected at least 8 characters" };
        }
      }
      o17 = v16;
      let v18 = v14.confirmPassword;
      let o19 = v18;
      if (typeof v18 !== "string") {
        issues[issues.length] = { path: "credentials.confirmPassword", code: "expected_string", expected: "string", message: "expected string", received: typeof v18 };
      } else {
        if (v18.length < 8) {
          issues[issues.length] = { path: "credentials.confirmPassword", code: "too_small", expected: "length >= 8", message: "expected at least 8 characters" };
        }
      }
      o19 = v18;
    }
    if (__v1({ value: v14 })) {
      if (!__v0(v14)) {
        issues[issues.length] = { path: "credentials.confirmPassword", code: "custom", expected: "refinement", message: "passwords must match" };
      }
    }
    o15 = v14;
    b3 = { "kind": o5, "age": o7, "cpf": o9, "phone": o11, "invite": o13, "credentials": o15 };
  }
  if (b3 === undefined) { b3 = v1; }
  o2 = b3;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;

exports[`generated source snapshots > validator: strict known keys and catchall transforms 1`] = `
"function is(value) {
  let v1 = value;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    return false;
  }
  let v3 = v1.id;
  if (typeof v3 !== "number") {
    return false;
  }
  if (!Number.isInteger(v3)) {
    return false;
  }
  let v5 = v1.meta;
  if (v5 === null || typeof v5 !== "object" || Array.isArray(v5)) {
    return false;
  }
  let v7 = v5.owner;
  if (typeof v7 !== "string") {
    return false;
  }
  v7 = v7.trim();
  const k9 = Object.keys(v5);
  for (let i10 = 0; i10 < k9.length; i10++) {
    if (k9[i10] !== "owner") {
      let v11 = v5[k9[i10]];
      if (typeof v11 !== "string") {
        return false;
      }
      v11 = v11.trim();
    }
  }
  const k13 = Object.keys(v1);
  for (let i14 = 0; i14 < k13.length; i14++) {
    if (k13[i14] !== "id" && k13[i14] !== "meta") {
      return false;
    }
  }
  return true;
}
function safeParse(value) {
  const issues = [];
  let v1 = value;
  let o2 = v1;
  let b3;
  if (v1 === null || typeof v1 !== "object" || Array.isArray(v1)) {
    issues[issues.length] = { path: "", code: "expected_object", expected: "object", message: "expected object", received: typeof v1 };
  } else {
    let v4 = v1.id;
    let o5 = v4;
    if (typeof v4 !== "number") {
      issues[issues.length] = { path: "id", code: "expected_number", expected: "number", message: "expected number", received: typeof v4 };
    } else {
      if (!Number.isInteger(v4)) {
        issues[issues.length] = { path: "id", code: "not_integer", expected: "integer", message: "expected an integer" };
      }
    }
    o5 = v4;
    let v6 = v1.meta;
    let o7 = v6;
    let b8;
    if (v6 === null || typeof v6 !== "object" || Array.isArray(v6)) {
      issues[issues.length] = { path: "meta", code: "expected_object", expected: "object", message: "expected object", received: typeof v6 };
    } else {
      let v9 = v6.owner;
      let o10 = v9;
      if (typeof v9 !== "string") {
        issues[issues.length] = { path: "meta.owner", code: "expected_string", expected: "string", message: "expected string", received: typeof v9 };
      } else {
        v9 = v9.trim();
      }
      o10 = v9;
      b8 = Object.assign({}, v6);
      const k11 = Object.keys(v6);
      for (let i12 = 0; i12 < k11.length; i12++) {
        if (k11[i12] !== "owner") {
          let v13 = v6[k11[i12]];
          let o14 = v13;
          if (typeof v13 !== "string") {
            issues[issues.length] = { path: "meta." + k11[i12], code: "expected_string", expected: "string", message: "expected string", received: typeof v13 };
          } else {
            v13 = v13.trim();
          }
          o14 = v13;
          b8[k11[i12]] = o14;
        }
      }
      b8.owner = o10;
    }
    if (b8 === undefined) { b8 = v6; }
    o7 = b8;
    const k15 = Object.keys(v1);
    for (let i16 = 0; i16 < k15.length; i16++) {
      if (k15[i16] !== "id" && k15[i16] !== "meta") {
        issues[issues.length] = { path: "" + k15[i16], code: "unknown_key", expected: "known keys only", message: "object contains unknown keys" };
      }
    }
    b3 = { "id": o5, "meta": o7 };
  }
  if (b3 === undefined) { b3 = v1; }
  o2 = b3;
  if (issues.length !== 0) {
    return { success: false, issues: issues };
  }
  return { success: true, data: o2 };
}
return { is: is, safeParse: safeParse };"
`;
